Fixed scrollbar bug

--- a/styles/base.less
+++ b/styles/base.less
@@ -318,3 +318,11 @@ atom-text-editor {
 atom-text-editor[mini] .scroll-view {
   padding-left: 1px;
 }
+
+.github-FilePatchView-line--added, .github-FilePatchView-line--selected{
+  background-color: @mildred !important;
+}
+
+.scrollbar-corner{
+  overflow:hidden !important;
+}
