--- a/styles/colors.less
+++ b/styles/colors.less
@@ -13,3 +13,4 @@
 @red: #ff0000;
 @orange: #ff6b00;
 @light-orange: #ffa900;
+@mildred:ff0045;
